# mcp-server-and-plugins

./: .env.example  .gitignore  README.md  claude-desktop-config-http-bridge.json.example  claude-desktop-config-native-mcp.json.example  claude_desktop_http_bridge_config.json.example  mcp_http_bridge.py  pyproject.toml  run.py
scripts/: start.sh  stop.sh
src/: app.py  mcp_server.py
src/clients/weather/: client.py  config.py  router.py  types.py
src/core/: base_client.py
src/middleware/: __init__.py  auth.py
src/types/: common.py
src/utils/: client_config.py  client_loader.py  config.py  mcp_client_loader.py
test/: check_endpoints.sh  check_native_mcp.sh
